# light-log

./: .gitignore  CMakeLists.txt
include/: light-log
include/light-log_bits/: date-time.hpp  log_file.hpp
src/: date-time.cpp  log_file.cpp
test/: main.cpp
